Adding the front end of an api that fetches the reminders based on today and userid

--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.bg-danger-light {
+  background-color: #FFCDD2;
+}
+
+.bg-success-light {
+  background-color: #A5D6A7;
+}
